--- a/modules/vscode/settings.json
+++ b/modules/vscode/settings.json
@@ -72,8 +72,15 @@
   "debug.onTaskErrors": "showErrors",
   "zig.zls.enabled": "on",
 
-  "workbench.editor.showTabs": "none",
+  "workbench.editor.showTabs": "multiple",
 
   "workbench.statusBar.visible": false,
-  "workbench.editor.enablePreview": false
+  "workbench.editor.enablePreview": false,
+  "editor.quickSuggestions": {
+    "other": true,
+    "comments": false,
+    "strings": false
+  },
+  "editor.suggest.localityBonus": true,
+  "editor.suggest.matchOnWordStartOnly": true
 }
