--- a/modules/vscode/settings.json
+++ b/modules/vscode/settings.json
@@ -1,86 +1,82 @@
 {
-  "editor.trimAutoWhitespace": false,
-
-  "gleam.path": "/home/linuxbrew/.linuxbrew/bin/gleam",
-  "prettier.printWidth": 120,
-  "js/ts.implicitProjectConfig.checkJs": true,
-  "direnv.restart.automatic": true,
-  "explorer.compactFolders": false,
-  "svelte.enable-ts-plugin": true,
-  "explorer.confirmDragAndDrop": false,
-  "workbench.activityBar.location": "bottom",
-  "editor.formatOnSave": true,
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "editor.tabSize": 2,
-  "explorer.confirmDelete": false,
-
-  "tailwindCSS.includeLanguages": {
-    "templ": "html"
-  },
-  "editor.fontFamily": "Fira Code",
-  "editor.fontLigatures": true,
-  "emmet.includeLanguages": {
-    "templ": "html"
-  },
-  "window.titleBarStyle": "custom",
-  "[jsonc]": {
+  "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "workbench.colorTheme": "Dark (Molokai)",
-  "explorer.fileNesting.patterns": {
-    "*.ts": "${capture}.js",
-    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
-    "*.jsx": "${capture}.js",
-    "*.tsx": "${capture}.ts",
-    "tsconfig.json": "tsconfig.*.json",
-    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
-    "*.templ": "${capture}_templ.go,${capture}_templ.txt",
-    "*.sqlite": "${capture}.${extname}-*",
-    "*.db": "${capture}.${extname}-*",
-    "*.sqlite3": "${capture}.${extname}-*",
-    "*.db3": "${capture}.${extname}-*",
-    "*.sdb": "${capture}.${extname}-*",
-    "*.s3db": "${capture}.${extname}-*"
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "security.workspace.trust.untrustedFiles": "open",
-  "explorer.confirmPasteNative": false,
-  "go.toolsManagement.autoUpdate": true,
-  "window.commandCenter": false,
-  "workbench.layoutControl.enabled": false,
-  "window.menuBarVisibility": "compact",
-  "files.associations": {
-    "*.sql": "sqlite"
-  },
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "extensions.ignoreRecommendations": true,
-  "liveServer.settings.donotShowInfoMsg": true,
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "[html]": {
+  "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "debug.onTaskErrors": "showErrors",
-  "zig.zls.enabled": "on",
-
-  "workbench.editor.showTabs": "multiple",
-
-  "workbench.statusBar.visible": false,
-  "workbench.editor.enablePreview": false,
+  "direnv.restart.automatic": true,
+  "editor.fontFamily": "Fira Code",
+  "editor.fontLigatures": true,
+  "editor.formatOnSave": true,
   "editor.quickSuggestions": {
-    "other": true,
     "comments": false,
+    "other": true,
     "strings": false
   },
   "editor.suggest.localityBonus": true,
-  "editor.suggest.matchOnWordStartOnly": true
+  "editor.suggest.matchOnWordStartOnly": true,
+  "editor.tabSize": 2,
+  "editor.trimAutoWhitespace": false,
+  "emmet.includeLanguages": {
+    "templ": "html"
+  },
+  "explorer.compactFolders": false,
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "explorer.confirmPasteNative": false,
+  "explorer.fileNesting.patterns": {
+    "*.db": "${capture}.${extname}-*",
+    "*.db3": "${capture}.${extname}-*",
+    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+    "*.jsx": "${capture}.js",
+    "*.s3db": "${capture}.${extname}-*",
+    "*.sdb": "${capture}.${extname}-*",
+    "*.sqlite": "${capture}.${extname}-*",
+    "*.sqlite3": "${capture}.${extname}-*",
+    "*.templ": "${capture}_templ.go,${capture}_templ.txt",
+    "*.ts": "${capture}.js",
+    "*.tsx": "${capture}.ts",
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
+    "tsconfig.json": "tsconfig.*.json"
+  },
+  "extensions.ignoreRecommendations": true,
+  "files.associations": {
+    "*.sql": "sqlite"
+  },
+  "gleam.path": "/home/linuxbrew/.linuxbrew/bin/gleam",
+  "go.toolsManagement.autoUpdate": true,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "js/ts.implicitProjectConfig.checkJs": true,
+  "liveServer.settings.donotShowInfoMsg": true,
+  "prettier.printWidth": 120,
+  "security.workspace.trust.untrustedFiles": "open",
+  "svelte.enable-ts-plugin": true,
+  "tailwindCSS.includeLanguages": {
+    "templ": "html"
+  },
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "window.commandCenter": false,
+  "window.menuBarVisibility": "compact",
+  "window.titleBarStyle": "custom",
+  "workbench.activityBar.location": "bottom",
+  "workbench.colorTheme": "Dark (Molokai)",
+  "workbench.editor.enablePreview": false,
+  "workbench.editor.showTabs": "multiple",
+  "workbench.layoutControl.enabled": false,
+  "workbench.statusBar.visible": false,
+  "zig.zls.enabled": "on"
 }
