--- a/modules/vscode/settings.json
+++ b/modules/vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "vscode://schemas/settings/user",
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
@@ -17,6 +18,7 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+
   "debug.onTaskErrors": "showErrors",
   "direnv.restart.automatic": true,
   "editor.fontFamily": "Fira Code",
@@ -53,6 +55,13 @@
     "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
     "tsconfig.json": "tsconfig.*.json"
   },
+  "chat.commandCenter.enabled": false,
+  "chat.detectParticipant.enabled": false,
+  "chat.extensionTools.enabled": false,
+  "chat.mcp.enabled": false,
+  "chat.agent.enabled": false,
+  "chat.edits2.enabled": false,
+  "chat.mcp.discovery.enabled": false,
   "extensions.ignoreRecommendations": true,
   "files.associations": {
     "*.sql": "sqlite"
