--- a/modules/vscode/settings.json
+++ b/modules/vscode/settings.json
@@ -23,6 +23,10 @@
   "emmet.includeLanguages": {
     "templ": "html"
   },
+  "search.quickOpen.includeHistory": false,
+  "explorer.openEditors.visible": 99,
+  "explorer.openEditors.minVisible": 30,
+  "explorer.openEditors.sortOrder": "fullPath",
   "explorer.compactFolders": false,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
