Add go default formatter

--- a/modules/vscode/settings.json
+++ b/modules/vscode/settings.json
@@ -2,6 +2,7 @@
   "$schema": "vscode://schemas/settings/user",
 
   "[xml]": { "editor.defaultFormatter": "redhat.vscode-xml" },
+  "[go]": { "editor.defaultFormatter": "golang.go" },
 
   "errorLens.enabledDiagnosticLevels": ["error", "warning"],
   "debug.onTaskErrors": "showErrors",
