--- a/modules/vscode/settings.json
+++ b/modules/vscode/settings.json
@@ -1,22 +1,65 @@
 {
   "$schema": "vscode://schemas/settings/user",
-
-  "[xml]": { "editor.defaultFormatter": "redhat.vscode-xml" },
-  "[go]": { "editor.defaultFormatter": "golang.go" },
-
-  "errorLens.enabledDiagnosticLevels": ["error", "warning"],
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[go]": {
+    "editor.defaultFormatter": "golang.go"
+  },
+  "[rust]": {
+    "editor.defaultFormatter": "rust-lang.rust-analyzer"
+  },
+  "[svelte]": {
+    "editor.defaultFormatter": "svelte.svelte-vscode"
+  },
+  "[xml]": {
+    "editor.defaultFormatter": "redhat.vscode-xml"
+  },
+  "chat.agent.enabled": false,
+  "chat.commandCenter.enabled": false,
+  "chat.detectParticipant.enabled": false,
+  "chat.edits2.enabled": false,
+  "chat.extensionTools.enabled": false,
+  "chat.mcp.discovery.enabled": {
+    "claude-desktop": false,
+    "windsurf": false,
+    "cursor-global": false,
+    "cursor-workspace": false
+  },
+  "chat.mcp.enabled": false,
   "debug.onTaskErrors": "showErrors",
+  "diffEditor.experimental.showMoves": true,
+  "diffEditor.experimental.useTrueInlineView": true,
+  "diffEditor.ignoreTrimWhitespace": true,
+  "diffEditor.renderSideBySide": false,
   "direnv.restart.automatic": false,
+  "editor.bracketPairColorization.enabled": false,
+  "editor.codeActionsOnSave": {
+    "source.addMissingImports": "always",
+    "source.removeUnusedImports": "always"
+  },
+  "editor.cursorSurroundingLines": 14,
+  "editor.cursorSurroundingLinesStyle": "default",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.detectIndentation": false,
   "editor.fontFamily": "Fira Code",
   "editor.fontLigatures": true,
   "editor.formatOnSave": true,
-  "editor.smoothScrolling": true,
+  "editor.formatOnSaveMode": "file",
+  "editor.formatOnType": true,
+  "editor.gotoLocation.multipleDefinitions": "goto",
+  "editor.hover.delay": 300,
+  "editor.minimap.showSlider": "always",
   "editor.mouseWheelScrollSensitivity": 3,
   "editor.quickSuggestions": {
     "comments": false,
     "other": true,
     "strings": false
   },
+  "editor.renderWhitespace": "none",
+  "editor.semanticHighlighting.enabled": true,
+  "editor.smoothScrolling": true,
+  "editor.stickyTabStops": true,
   "editor.suggest.localityBonus": true,
   "editor.suggest.matchOnWordStartOnly": true,
   "editor.tabSize": 2,
@@ -24,13 +67,19 @@
   "emmet.includeLanguages": {
     "templ": "html"
   },
-
-  "search.quickOpen.includeHistory": false,
-  "workbench.tree.stickyScrollMaxItemCount": 2,
-  "workbench.tree.renderIndentGuides": "always",
-  "explorer.openEditors.visible": 20,
-  "explorer.openEditors.minVisible": 0,
-  "explorer.openEditors.sortOrder": "editorOrder",
+  "errorLens.enabledDiagnosticLevels": ["error"],
+  "eslint.codeAction.disableRuleComment": {
+    "enable": false
+  },
+  "eslint.codeAction.showDocumentation": {
+    "enable": false
+  },
+  "eslint.rules.customizations": [
+    {
+      "rule": "*",
+      "severity": "info"
+    }
+  ],
   "explorer.compactFolders": true,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
@@ -50,110 +99,71 @@
     "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
     "tsconfig.json": "tsconfig.*.json"
   },
-  "chat.commandCenter.enabled": false,
-  "chat.detectParticipant.enabled": false,
-  "chat.extensionTools.enabled": false,
-  "chat.mcp.enabled": false,
-  "chat.agent.enabled": false,
-  "chat.edits2.enabled": false,
-  "chat.mcp.discovery.enabled": false,
+  "explorer.openEditors.minVisible": 0,
+  "explorer.openEditors.sortOrder": "editorOrder",
+  "explorer.openEditors.visible": 20,
   "extensions.ignoreRecommendations": true,
   "files.associations": {
     "*.sql": "sqlite"
   },
   "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true,
+    "**/.git": true,
+    "**/.hg": true,
+    "**/.svn": true,
     "**/.turbo": true,
+    "**/CVS": true,
+    "**/Thumbs.db": true,
     "**/vite.config.*.timestamp*": true
   },
-
-  "go.toolsManagement.autoUpdate": true,
-  "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "js/ts.implicitProjectConfig.checkJs": true,
-
-  "eslint.rules.customizations": [{ "rule": "*", "severity": "info" }],
-  "eslint.codeAction.disableRuleComment": {
-    "enable": false
-  },
-  "eslint.codeAction.showDocumentation": {
-    "enable": false
-  },
-  "editor.codeActionsOnSave": {
-    "source.addMissingImports": "always",
-    "source.removeUnusedImports": "always"
-  },
-  "jupyter.askForKernelRestart": false,
-  "notebook.formatOnSave.enabled": true,
-  "notebook.lineNumbers": "on",
-  "notebook.output.wordWrap": true,
-  "python.createEnvironment.trigger": "off",
-  "liveServer.settings.donotShowInfoMsg": true,
-  "liveServer.settings.donotVerifyTags": true,
-  "prettier.printWidth": 120,
-  "security.workspace.trust.untrustedFiles": "open",
-  "svelte.plugin.svelte.defaultScriptLanguage": "ts",
-  "svelte.enable-ts-plugin": true,
-  "tailwindCSS.includeLanguages": {
-    "templ": "html"
-  },
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "window.customMenuBarAltFocus": false,
-  "window.commandCenter": false,
-  "window.titleBarStyle": "custom",
-  "workbench.colorTheme": "Dark (Molokai)",
-  "workbench.editor.highlightModifiedTabs": true,
-  "workbench.editor.enablePreview": true,
-  "workbench.editor.showTabs": "none",
-  "workbench.layoutControl.enabled": false,
-  "zig.zls.enabled": "on",
-  "[css]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "git.enableSmartCommit": true,
-  "git.confirmSync": false,
-
-  "editor.detectIndentation": false,
-  "editor.bracketPairColorization.enabled": false,
-  "editor.cursorSurroundingLines": 14,
-  "editor.cursorSurroundingLinesStyle": "default",
-  "editor.semanticHighlighting.enabled": true,
-  "editor.minimap.showSlider": "always",
-  "editor.stickyTabStops": true,
-  "editor.formatOnType": true,
-  "editor.formatOnSaveMode": "file",
-  "editor.gotoLocation.multipleDefinitions": "goto",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.renderWhitespace": "none",
-  "editor.hover.delay": 300,
-
   "git.autofetch": true,
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true,
   "git.ignoreMissingGitWarning": true,
   "git.openRepositoryInParentFolders": "never",
   "githubPullRequests.createOnPublishBranch": "never",
   "githubPullRequests.pullBranch": "never",
+  "go.toolsManagement.autoUpdate": true,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "js/ts.implicitProjectConfig.checkJs": true,
+  "jupyter.askForKernelRestart": false,
+  "liveServer.settings.donotShowInfoMsg": true,
+  "liveServer.settings.donotVerifyTags": true,
+  "notebook.formatOnSave.enabled": true,
+  "notebook.lineNumbers": "on",
+  "notebook.output.wordWrap": true,
+  "playwright.reuseBrowser": false,
+  "prettier.printWidth": 120,
+  "python.createEnvironment.trigger": "off",
   "redhat.telemetry.enabled": false,
   "remote.autoForwardPortsSource": "hybrid",
+  "search.quickOpen.includeHistory": false,
   "security.allowedUNCHosts": ["wsl.localhost"],
   "security.promptForLocalFileProtocolHandling": false,
   "security.workspace.trust.enabled": false,
-  "terminal.integrated.defaultProfile.windows": "PowerShell",
-  "terminal.integrated.fontSize": 14,
-  "terminal.integrated.fontFamily": "MesloLGM Nerd Font",
-  "diffEditor.experimental.showMoves": true,
-  "diffEditor.ignoreTrimWhitespace": true,
-  "diffEditor.renderSideBySide": false,
-  "diffEditor.experimental.useTrueInlineView": true,
-  "[svelte]": {
-    "editor.defaultFormatter": "svelte.svelte-vscode"
+  "security.workspace.trust.untrustedFiles": "open",
+  "svelte.enable-ts-plugin": true,
+  "svelte.plugin.svelte.defaultScriptLanguage": "ts",
+  "tailwindCSS.includeLanguages": {
+    "templ": "html"
   },
-  "workbench.startupEditor": "none",
-  "playwright.reuseBrowser": false,
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
+  "terminal.integrated.fontFamily": "MesloLGM Nerd Font",
+  "terminal.integrated.fontSize": 14,
+  "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "window.commandCenter": false,
+  "window.customMenuBarAltFocus": false,
+  "window.titleBarStyle": "custom",
+  "workbench.activityBar.location": "top",
+  "workbench.colorTheme": "Dark (Molokai)",
+  "workbench.editor.enablePreview": true,
+  "workbench.editor.highlightModifiedTabs": true,
+  "workbench.editor.showTabs": "none",
   "workbench.editor.tabSizing": "shrink",
-  "workbench.activityBar.location": "top"
+  "workbench.layoutControl.enabled": false,
+  "workbench.startupEditor": "none",
+  "workbench.tree.renderIndentGuides": "always",
+  "workbench.tree.stickyScrollMaxItemCount": 2,
+  "zig.zls.enabled": "on"
 }
